Se agregan logs
